syntax = "proto3";

package blokus;

import "google/protobuf/timestamp.proto";
import "common.proto";

// ========================================
// Authentication System Messages
// ========================================

enum AuthMethod {
  AUTH_METHOD_USERNAME_PASSWORD = 0;
  AUTH_METHOD_EMAIL_PASSWORD = 1;
  AUTH_METHOD_GUEST = 2;
  AUTH_METHOD_TOKEN = 3;  // Session token auth
}

enum AccountStatus {
  ACCOUNT_STATUS_ACTIVE = 0;
  ACCOUNT_STATUS_SUSPENDED = 1;
  ACCOUNT_STATUS_BANNED = 2;
  ACCOUNT_STATUS_PENDING_VERIFICATION = 3;
  ACCOUNT_STATUS_DELETED = 4;
}

// ========================================
// Login Request/Response
// ========================================

message AuthRequest {
  AuthMethod method = 1;
  
  // Basic auth fields
  string username = 2;
  string password = 3;
  string email = 4;
  
  // Session token auth fields
  string session_token = 5;
  
  // Guest login
  string guest_id = 6;
  
  // Client information
  string client_version = 10;
  string platform = 11;      // "Windows", "Android", "iOS" etc
  string device_id = 12;     // Unique device ID
  string user_agent = 13;    // Browser info (web client)
}

message AuthResponse {
  Result result = 1;
  
  // Success case
  string session_token = 2;
  string user_id = 3;
  UserInfo user_info = 4;
  
  // Session information
  google.protobuf.Timestamp expires_at = 5;
  string refresh_token = 6;
  
  // Account status
  AccountStatus account_status = 7;
  string status_message = 8;
  
  // Server information
  ServerInfo server_info = 9;
}

// ========================================
// Registration Request/Response
// ========================================

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  
  // Terms and conditions
  bool terms_accepted = 4;
  bool privacy_accepted = 5;
  
  // Client information
  string client_version = 10;
  string platform = 11;
  string device_id = 12;
}

message RegisterResponse {
  Result result = 1;
  
  // Success case
  string user_id = 2;
  string verification_token = 3;  // For email verification
  
  // Auto-login after registration
  string session_token = 4;
  UserInfo user_info = 5;
}

// ========================================
// Logout Request/Response
// ========================================

message LogoutRequest {
  string session_token = 1;
  string reason = 2;  // "user_logout", "timeout", "forced" etc
  bool invalidate_all_sessions = 3;
}

message LogoutResponse {
  Result result = 1;
  string message = 2;
}

// ========================================
// Session Management
// ========================================

message SessionValidateRequest {
  string session_token = 1;
  bool extend_session = 2;  // Extend session if valid
}

message SessionValidateResponse {
  Result result = 1;
  bool is_valid = 2;
  UserInfo user_info = 3;
  google.protobuf.Timestamp expires_at = 4;
  string new_token = 5;  // If session was extended
}

message RefreshTokenRequest {
  string refresh_token = 1;
  string client_version = 2;
}

message RefreshTokenResponse {
  Result result = 1;
  string new_session_token = 2;
  string new_refresh_token = 3;
  google.protobuf.Timestamp expires_at = 4;
}

// ========================================
// Heartbeat System
// ========================================

message HeartbeatRequest {
  uint32 sequence_number = 1;
  float cpu_usage = 2;
  uint32 memory_usage_mb = 3;
  uint32 fps = 4;
  bool is_window_focused = 5;
}

message HeartbeatResponse {
  uint32 sequence_number = 1;
  ServerInfo server_info = 2;
  google.protobuf.Timestamp server_time = 3;
}